flux/apps/gotify/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        # runAsUser: 2000
        # runAsGroup: 2000
        # fsGroup: 2000
        readOnlyRootFilesystem: true
      containers:
        - name: gotify
          image: docker.io/gotify/server:3.1.1
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: gotify-http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: gotify-data
          livenessProbe:
            tcpSocket:
              port: gotify-http
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: gotify-http
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "250M"
              cpu: ".25"
            limits:
              memory: "1G"
              cpu: "1"

      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data
