flux/apps/gotify/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gotify
  ports:
    - name: gotify-http
      port: 80
      targetPort: gotify-http
      protocol: TCP
